shadow and dark mode fixes

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ header h1 {
 main {
     max-width: 900px;
     margin: 20px auto;
-    padding: 20px;
+    /* padding: 20px; */
     background: #f9f9f9;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 section {
     margin-bottom: 20px;
@@ -69,8 +69,18 @@ footer {
     flex: 1;
     background: #f9f9f9;
     border-radius: 10px;
+    /* padding: 40px; */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    
+}
+.content-wrapper{
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+}
+
+.lecture-topics {
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 .lecture-topics h2 {
     margin-top: 0;
@@ -101,7 +111,7 @@ footer {
 }
 
 .dark-mode main, .dark-mode footer{
-    background: #121212;
+    background: #1a1a1a;
     color: #ffffff;
 }
 
@@ -110,7 +120,7 @@ footer {
 } */
 
 .dark-mode .lecture-topics {
-    background: #272727;
+    background: #1a1a1a;
     color: #ffffff;
 }
 
